# telegram-tts-bot

./: pyproject.toml
telegramttsbot/: bot.py
